[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/Text.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main Menu/menu/returnToTitle.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.952941, 0.854902, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 1 )

[node name="mentalMaths" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 120 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timesTable button" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 40.0
margin_right = 370.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.972549, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="."]
margin_right = 60.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottomText" type="Label" parent="."]
margin_left = 477.0
margin_top = 620.0
margin_right = 803.0
margin_bottom = 690.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Choose your desired game mode

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timesTableText" type="Label" parent="."]
margin_left = 90.0
margin_top = 200.0
margin_right = 437.0
margin_bottom = 449.0
rect_pivot_offset = Vector2( 140.799, 178.603 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.964706, 0.0588235, 1 )
text = "Times
Tables"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cubeToCubeText" type="Label" parent="."]
margin_left = 840.0
margin_top = 130.0
margin_right = 1187.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.964706, 0.0588235, 1 )
text = "Cube
To
Cube"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cubeToCube button" type="Button" parent="."]
show_behind_parent = true
margin_left = 790.0
margin_top = 100.0
margin_right = 1240.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="timesTable button" to="." method="times_tables_button"]
[connection signal="pressed" from="backButton" to="." method="back_button"]
[connection signal="pressed" from="cubeToCube button" to="." method="cubeToCube_button_"]
